2: add table Tasks and functions for working with it

--- a/ui/html/formUsersList.html
+++ b/ui/html/formUsersList.html
@@ -43,7 +43,7 @@
           </thead>
           <tbody>
               {{range .Values}}
-              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700" onclick="usersRowClick('{{.Id}}','{{.Name}}')">
+              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700" onmouseover="usersСhangeBackgroundColor(this, true)" onmouseout="usersСhangeBackgroundColor(this, false)" onclick="usersRowClick('{{.Id}}','{{.Name}}')">
                   <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white ">
                     {{.Id}}
                   </th>
