--- a/ui/html/templates.html
+++ b/ui/html/templates.html
@@ -40,7 +40,7 @@
    </div>
    
  <nav class="text-white text-base font-semibold pt-3">
-    <a href="/tasks" class="flex items-center active-nav-link text-white py-4 pl-6 nav-item">
+    <a href="/formTasks" class="flex items-center active-nav-link text-white py-4 pl-6 nav-item">
        <i class="fas fa-table mr-3"></i>
            Tasks
        </a>
@@ -91,7 +91,7 @@
 
          <!-- Dropdown Nav -->
          <nav :class="isOpen ? 'flex': 'hidden'" class="flex flex-col pt-4">
-             <a href="/tasks" class="flex items-center active-nav-link text-white py-2 pl-4 nav-item">
+             <a href="/formTasks" class="flex items-center active-nav-link text-white py-2 pl-4 nav-item">
                  <i class="fas fa-table mr-3"></i>
                  Tasks
              </a>
