--- a/ui/html/templates.html
+++ b/ui/html/templates.html
@@ -47,6 +47,10 @@
        <i class="fas fa-table mr-3"></i>
            Tasks
        </a>
+    <a href="/formTasksLabels" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+        <i class="fas fa-align-left mr-3"></i>
+        TasksLabels
+    </a>
     <a href="/formLabels" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
            <i class="fas fa-align-left mr-3"></i>
            Labels
@@ -98,7 +102,11 @@
                  <i class="fas fa-table mr-3"></i>
                  Tasks
              </a>
-         <a href="/formLabels" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+             <a href="/formTasksLabels" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+                <i class="fas fa-align-left mr-3"></i>
+                TasksLabels
+             </a>
+             <a href="/formLabels" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                  <i class="fas fa-align-left mr-3"></i>
                  Labels
              </a>
